--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
         <nav class="navigation">
           <ul class="menu">
-            <li><a href="./" class="menu__link">Игра</a></li>
+            <li><a class="menu__link" data-popup-open="memory">Игра</a></li>
             <li><a href="./" class="menu__link">Благородные сыры</a></li>
-            <li><a href="./" class="menu__link">Продукция</a></li>
+            <li><a class="menu__link" data-popup-open="production">Продукция</a></li>
             <li><a class="menu__link" data-popup-open="faq">Частые вопросы</a></li>
             <li class="header__buttons">
               <button class="button button--small" data-popup-open="cheque"><span>Загрузить чек</span></button>
@@ -106,13 +106,13 @@
             <li>
               <h3 class="title title--h3">Играй в&nbsp;игру <br />Мемори</h3>
               <p>и&nbsp;участвуй в&nbsp;розыгрыше <br />специального приза</p>
-              <button class="button" data-popup-open="cheque"><span>ИГРАТЬ</span></button>
+              <button class="button" data-popup-open="memory"><span>ИГРАТЬ</span></button>
             </li>
           </ul>
         </div>
       </section>
 
-      <!--MAIN PRIZE-->
+      <!--MAIN PRIZ-->
       <section class="section section--mainprize border-bottom border-top">
         <div class="container">
           <h2 class="title">
@@ -124,7 +124,270 @@
         </div>
       </section>
 
-      <section class="section section--test"></section>
+      <!--WEEK PRIZES-->
+      <section
+        class="section section--weekprize"
+        data-slider
+        data-slides-per-view="3,3,1"
+        data-slides-per-group="1,1,1"
+        data-space-between="24,20,20"
+        data-centered="true"
+        data-initial-slide="1,1,0"
+      >
+        <div class="container">
+          <h2 class="title title--h2 yellow">Еженедельные призы</h2>
+
+          <div class="swiper swiper--weekprize">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="weekprize">
+                  <img src="./assets/img/prizes/otello.webp" alt="otello" />
+                  <p>Сертификат Оттелло</p>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="weekprize">
+                  <img src="./assets/img/prizes/cuva.webp" alt="cuva" />
+                  <p>Сертификат Cuva</p>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="weekprize">
+                  <img src="./assets/img/prizes/cozy-home.webp" alt="cozy-home" />
+                  <p>Сертификат Cozy Home</p>
+                </div>
+              </div>
+
+              <!-- <div class="swiper-slide">
+                <div class="weekprize">
+                  <img src="./assets/img/prizes/yandex-plus.webp" alt="yandex-plus" />
+                  <p>Сертификат Яндекс плюс</p>
+                </div>
+              </div> -->
+
+              <!-- <div class="swiper-slide">
+                <div class="weekprize">
+                  <img src="./assets/img/prizes/ozon-500.webp" alt="ozon" />
+                  <p>Сертификат Ozon</p>
+                </div>
+              </div> -->
+
+              <div class="swiper-slide">
+                <div class="weekprize">
+                  <img src="./assets/img/prizes/ozon-20000.webp" alt="ozon" />
+                  <p>Сертификат Ozon</p>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="weekprize">
+                  <img src="./assets/img/prizes/ozon-30000.webp" alt="ozon" />
+                  <p>Сертификат Ozon</p>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="weekprize">
+                  <img src="./assets/img/prizes/m-video.webp" alt="m-video" />
+                  <p>Сертификат М.Видео</p>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="weekprize">
+                  <img src="./assets/img/prizes/m-video-15000.webp" alt="m-video" />
+                  <p>Сертификат М.Видео</p>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="weekprize">
+                  <img src="./assets/img/prizes/hoff.webp" alt="hoff" />
+                  <p>Сертификат Hoff</p>
+                </div>
+              </div>
+
+              <!-- <div class="swiper-slide">
+                <div class="weekprize">
+                  <img src="./assets/img/prizes/500000.webp" alt="500000" />
+                  <p>Сертификат на 500 000₽</p>
+                </div>
+              </div> -->
+            </div>
+
+            <button class="swiper-arrow" data-arrow-prev></button>
+            <button class="swiper-arrow" data-arrow-next></button>
+          </div>
+        </div>
+      </section>
+
+      <!--GARANTY PRIZES-->
+      <section class="section section--garanty border-top-red">
+        <div class="container">
+          <h2 class="title title--h2 yellow">Гарантированные призы</h2>
+
+          <ul class="garanty-prizes">
+            <li>
+              <article>
+                <div class="image">
+                  <span class="yandex-big">
+                    <img src="./assets/img/yandex-big.webp" alt="" />
+                    <span class="blik blik--yandex"></span>
+                  </span>
+                </div>
+                <p>Баллы Яндекс Плюс <span>за&nbsp;загрузку чеков</span></p>
+                <button class="button" data-popup-open="cheque"><span>ЗАГРУЗИТЬ ЧЕК</span></button>
+              </article>
+            </li>
+            <li>
+              <article>
+                <div class="image">
+                  <span class="ozon-big">
+                    <img src="./assets/img/ozon-big.webp" alt="" />
+                    <span class="blik blik--ozon"></span>
+                  </span>
+                </div>
+                <p>500&nbsp;₽ на&nbsp;Ozon <span>за&nbsp;прохождение игры</span></p>
+                <button class="button" data-popup-open="memory"><span>ИГРАТЬ</span></button>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!--WINNERS-->
+      <section class="section section--winners border-top-invers border-bottom">
+        <div class="container">
+          <h2 class="title title--h2 yellow">Победители</h2>
+
+          <!--filters-->
+          <div class="winners-filters">
+            <!--select-->
+            <label class="label">
+              <select name="week" class="input input--select placeholder" required>
+                <option value="" disabled="" selected="" hidden="">Неделя 1</option>
+                <option value="Неделя 1">Неделя 1</option>
+                <option value="Неделя 2">Неделя 2</option>
+                <option value="Неделя 3">Неделя 3</option>
+              </select>
+              <span class="input-icon">
+                <svg width="14" height="10" viewBox="0 0 14 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M13.1569 1.65685L7.1007 7.71301L1.44385 2.05615" stroke="black" stroke-width="2" />
+                </svg>
+              </span>
+            </label>
+
+            <!--Логика отправки формы поиска (для примера)-->
+            <script>
+              function onSearchFormSubmit(e) {
+                e.preventDefault();
+                alert('Форма поиска отправлена');
+                e.target.reset();
+              }
+            </script>
+
+            <!--search-->
+            <form action="#" class="form" novalidate onsubmit="onSearchFormSubmit(event)">
+              <label>
+                <input type="tel" name="search" class="input input-search" placeholder="Поиск по телефону" autocomplete="off" required />
+              </label>
+
+              <button type="submit">
+                <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M9.28711 17C13.7054 17 17.2871 13.4183 17.2871 9C17.2871 4.58172 13.7054 1 9.28711 1C4.86883 1 1.28711 4.58172 1.28711 9C1.28711 13.4183 4.86883 17 9.28711 17Z"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path d="M19.287 19L14.937 14.65" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+              </button>
+            </form>
+          </div>
+
+          <!--WINNERS TABLE-->
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Дата</th>
+                <th>Имя</th>
+                <th>Контакт</th>
+                <th>Приз</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>дд.мм.гггг</td>
+                <td>Пантелеймон Р.</td>
+                <td>+XXXXXXXX***</td>
+                <td>Баллы Яндекс Плюс</td>
+              </tr>
+              <tr>
+                <td>дд.мм.гггг</td>
+                <td>Константин Д.</td>
+                <td>+XXXXXXXX***</td>
+                <td>500 ₽ на Ozon</td>
+              </tr>
+              <tr>
+                <td>дд.мм.гггг</td>
+                <td>Лера В.</td>
+                <td>+XXXXXXXX***</td>
+                <td>Сертификат Cozy Home</td>
+              </tr>
+              <tr>
+                <td>дд.мм.гггг</td>
+                <td>Антонина Н.</td>
+                <td>+XXXXXXXX***</td>
+                <td>Сертификат Cozy Home</td>
+              </tr>
+              <tr>
+                <td>дд.мм.гггг</td>
+                <td>Елизавета Т.</td>
+                <td>+XXXXXXXX***</td>
+                <td>Сертификат Cozy Home</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <!--PAGINATION-->
+          <ul class="pagination">
+            <li>
+              <button href="#" class="pagination-btn prev" disabled>
+                <svg width="9" height="16" viewBox="0 0 9 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M7.27783 1.48193L1.35191 7.90169L7.27783 14.3214"
+                    stroke="#CC0102"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </li>
+            <li><a href="#" class="pagination-btn active">1</a></li>
+            <li><a href="#" class="pagination-btn">2</a></li>
+            <li><a href="#" class="pagination-btn">3</a></li>
+            <li><a href="#" class="pagination-btn">4</a></li>
+            <li>
+              <button class="pagination-btn next">
+                <svg width="9" height="16" viewBox="0 0 9 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M1.72217 14.519L7.64809 8.09929L1.72217 1.67954"
+                    stroke="#CC0102"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <!--FOOTER-->
@@ -140,9 +403,163 @@
     <!--POPUPS-->
     <div class="backdrop" data-backdrop>
       <div class="popup" data-popup>
+        <!--LOGIN POPUP-->
+        <div class="popup-content" id="login">
+          <button class="popup-close" data-popup-close></button>
+          <div class="red-wrapper"></div>
+        </div>
+
+        <!--FAQ POPUP-->
         <div class="popup-content" id="faq">
           <button class="popup-close" data-popup-close></button>
-          <h2 class="popup-title">Вопросы</h2>
+          <h4 class="title title--h4">Часто задаваемые вопросы</h4>
+          <ul class="faq" data-accordeons>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle>
+                <p>Оригинальная рецептура</p>
+              </div>
+              <div class="answer">
+                <div class="answer__content">
+                  <ul>
+                    <li>Благородная белая плесень Geotrichum candidum</li>
+                    <li>Бархатистая корочка</li>
+                    <li>Уникальный пикантный вкус</li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle>
+                <p>Вкус с&nbsp;историей</p>
+              </div>
+              <div class="answer">
+                <div class="answer__content">
+                  <ul>
+                    <li>30-е годы&nbsp;— Андре Бенье создаёт первые 17&nbsp;головок камамбера</li>
+                    <li>1968&nbsp;год&nbsp;— рождается бренд Président</li>
+                    <li>Наши дни&nbsp;— Président стал символом качества и&nbsp;традиций</li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle>
+                <p>Изысканные сочетания</p>
+              </div>
+              <div class="answer">
+                <div class="answer__content">
+                  <ul>
+                    <li>Идеальная пара&nbsp;— игристое, белое и&nbsp;лёгкое красное вино</li>
+                    <li>Прекрасно сочетается с&nbsp;мёдом, орехами и&nbsp;виноградом</li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle>
+                <p>Ассортимент</p>
+              </div>
+              <div class="answer">
+                <div class="answer__content">
+                  <ul>
+                    <li>Классический Camembert Président</li>
+                    <li>Camembert Grill&nbsp;— идеально для&nbsp;жарки и&nbsp;запекания</li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <!--CHEQUE POPUP-->
+        <div class="popup-content" id="cheque">
+          <button class="popup-close" data-popup-close></button>
+          <div class="red-wrapper">
+            <h2 class="popup-title">Регистрация чека</h2>
+            <p class="popup-subtitle">Чек будет участвовать <br />в&nbsp;розыгрыше приза <br />из&nbsp;выбранной категории.</p>
+            <p class="popup-subtitle">Выбери какой приз подарит <br />тебе настоящее удовольствие.</p>
+            <div class="buttons">
+              <button class="button full" data-popup-open="faq"><span>Отдых и релакс</span></button>
+              <button class="button full" data-popup-open="faq"><span>Дом и уют</span></button>
+              <button class="button full" data-popup-open="faq"><span>Техника и гаджеты</span></button>
+            </div>
+          </div>
+        </div>
+
+        <!--PRODUCTION POPUP-->
+        <div class="popup-content" id="production">
+          <button class="popup-close" data-popup-close></button>
+          <h2 class="title title--h4">Окунитесь в&nbsp;мир&nbsp;оттенков изысканного вкуса настоящего благородного сыра Président!</h2>
+          <ul class="production">
+            <li>
+              <img src="./assets/img/productions/1.webp" alt="" />
+              <h3>Brie</h3>
+              <p>Классический сыр&nbsp;с&nbsp;благородной плесенью, знаменитый своей бархатистой корочкой и&nbsp;глубоким сливочным вкусом</p>
+            </li>
+            <li>
+              <img src="./assets/img/productions/2.webp" alt="" />
+              <h3>Camembert</h3>
+              <p>Легендарный сырс&nbsp;нежной сердцевиной и&nbsp;пикантным вусом&nbsp;тонкой бархатистой&nbsp;корочки</p>
+            </li>
+            <li>
+              <img src="./assets/img/productions/3.webp" alt="" />
+              <h3>Le Cremiot Extra Fondant</h3>
+              <p>Сыр с&nbsp;нежнейшей кремовой текстурой, который буквально тает во&nbsp;рту.</p>
+            </li>
+            <li>
+              <img src="./assets/img/productions/4.webp" alt="" />
+              <h3>Royal Blue</h3>
+              <p>
+                Сыр с&nbsp;голубой плесенью и&nbsp;уникальным вкусом, который достигается благодаря длинному сроку созревания (до&nbsp;90&nbsp;дней)
+              </p>
+            </li>
+            <li>
+              <img src="./assets/img/productions/5.webp" alt="" />
+              <h3>La Brique</h3>
+              <p>Тонкая корочка, текучая текстура и&nbsp;бесподобный вкус с&nbsp;прятными нотками тёплого молока и&nbsp;фундка</p>
+            </li>
+            <li>
+              <img src="./assets/img/productions/6.webp" alt="" />
+              <h3>Red Snack</h3>
+              <p>Уникальный насыщенный вкус с&nbsp;пикантными дымными нотками и&nbsp;сливочным послевкусием</p>
+            </li>
+          </ul>
+        </div>
+
+        <!--GAME POPUP-->
+        <div class="popup-content" id="memory">
+          <button class="popup-close" data-popup-close></button>
+          <div class="red-wrapper">
+            <ul class="memory-preview">
+              <li>
+                <div class="card">
+                  <div class="flip">
+                    <div class="flip__front"></div>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="card active">
+                  <div class="flip">
+                    <div class="flip__back">
+                      <img src="./assets/img/memory/4.webp" alt="" />
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+
+            <p class="popup-subtitle">
+              <b>
+                Играй в&nbsp;игру Мемори <br />
+                и&nbsp;участвуй в&nbsp;розыгрыше <br />
+                специального приза
+              </b>
+            </p>
+            <div class="buttons">
+              <a href="./memory.html" class="button full"><span>Играть</span></a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
