--- a/index.html
+++ b/index.html
@@ -406,7 +406,28 @@
         <!--LOGIN POPUP-->
         <div class="popup-content" id="login">
           <button class="popup-close" data-popup-close></button>
-          <div class="red-wrapper"></div>
+          <div class="tabs" data-tabs>
+            <ul class="tabs-navigation">
+              <li><button data-tab-target="1">Вход</button></li>
+              <li><button data-tab-target="2">Регистрация</button></li>
+            </ul>
+            <div class="tab" data-tab="1">
+              <form action="#" class="form">
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto molestiae repellendus eius error et itaque nemo autem eum
+                  repellat sunt dolores, exercitationem esse ullam cumque veritatis temporibus tempore odit. Vel!
+                </p>
+              </form>
+            </div>
+            <div class="tab" data-tab="2">
+              <form action="#" class="form">
+                <p>
+                  Aliquam minus repellat praesentium ad in autem quis, esse tempora, eos corrupti, vitae quo nihil optio mollitia sapiente beatae.
+                  Minus, tenetur provident Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
+              </form>
+            </div>
+          </div>
         </div>
 
         <!--FAQ POPUP-->
