--- a/index.html
+++ b/index.html
@@ -412,20 +412,119 @@
               <li><button data-tab-target="2">Регистрация</button></li>
             </ul>
             <div class="tab" data-tab="1">
-              <form action="#" class="form">
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto molestiae repellendus eius error et itaque nemo autem eum
-                  repellat sunt dolores, exercitationem esse ullam cumque veritatis temporibus tempore odit. Vel!
-                </p>
+              <!--Login form-->
+              <script>
+                function onLoginFormSubmit(e) {
+                  e.preventDefault();
+                  alert('Отправлена форма логина!');
+                }
+              </script>
+              <form action="#" class="form" novalidate onsubmit="onLoginFormSubmit(event)">
+                <label class="label">
+                  <span class="label__text">E-mail</span>
+                  <input type="email" name="email" class="input" required />
+                </label>
+                <label class="label">
+                  <span class="label__text">Пароль</span>
+                  <input type="password" name="password" class="input" required />
+                </label>
+                <label class="label">
+                  <input type="checkbox" name="remember" class="checkbox" />
+                  <span class="label__text">Запомнить меня</span>
+                </label>
+                <button type="submit" class="button button--submit full"><span>Войти</span></button>
+                <a class="link" data-popup-open="reset-password">Восстановление пароля</a>
               </form>
             </div>
             <div class="tab" data-tab="2">
-              <form action="#" class="form">
-                <p>
-                  Aliquam minus repellat praesentium ad in autem quis, esse tempora, eos corrupti, vitae quo nihil optio mollitia sapiente beatae.
-                  Minus, tenetur provident Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                </p>
+              <!--Registration form-->
+              <script>
+                function onRegisterFormSubmit(e) {
+                  e.preventDefault();
+                  window.popup.open('register-success');
+                }
+              </script>
+              <form action="#" class="form" novalidate onsubmit="onRegisterFormSubmit(event)">
+                <label class="label">
+                  <span class="label__text">Имя</span>
+                  <input type="text" name="name" class="input" required />
+                </label>
+                <label class="label">
+                  <span class="label__text">Фамилия</span>
+                  <input type="text" name="sername" class="input" required />
+                </label>
+                <label class="label">
+                  <span class="label__text">E-mail</span>
+                  <input type="email" name="email" class="input" required />
+                </label>
+                <label class="label">
+                  <span class="label__text">Пароль</span>
+                  <input type="password" name="password" class="input" required placeholder="Придумайте пароль" />
+                </label>
+                <label class="label">
+                  <span class="label__text">Телефон</span>
+                  <input type="tel" name="phone" class="input" required placeholder="+7 ___ ___-__-__" autocomplete="off" />
+                </label>
+                <label class="label">
+                  <input type="checkbox" name="agree" class="checkbox" required />
+                  <span class="label__text">Я соглашаюсь с&nbsp;<a href="#" class="link">Правилами</a> </span>
+                </label>
+                <button type="submit" class="button button--submit full"><span>Зарегистрироваться</span></button>
               </form>
+            </div>
+          </div>
+        </div>
+
+        <!--REGISTER SUCCESS POPUP-->
+        <div class="popup-content" id="register-success">
+          <button class="popup-close" data-popup-close></button>
+          <div class="red-wrapper">
+            <div class="popup-image">
+              <img src="./assets/img/registration.webp" alt="" />
+            </div>
+            <h2 class="popup-title">Спасибо <br />за&nbsp;регистрацию! 🎉</h2>
+            <div class="buttons">
+              <a href="#" class="button button--submit full" download>Скачать стикеры</a>
+            </div>
+          </div>
+        </div>
+
+        <!--RESET PASSWORD POPUP-->
+        <div class="popup-content" id="reset-password">
+          <button class="popup-close" data-popup-close></button>
+          <div class="red-wrapper">
+            <h2 class="popup-title">Восстановите <br />пароль</h2>
+
+            <!--reset password form-->
+            <script>
+              function onResetFormSubmit(e) {
+                e.preventDefault();
+                window.popup.open('reset-password-success');
+              }
+            </script>
+            <form action="#" class="form" novalidate onsubmit="onResetFormSubmit(event)">
+              <label class="label">
+                <span class="label__text">E-mail</span>
+                <input type="email" name="email" class="input" required />
+              </label>
+
+              <div class="buttons">
+                <button type="submit" class="button button--submit full"><span>Восстановить</span></button>
+              </div>
+
+              <a class="link" data-popup-open="login">Авторизация</a>
+            </form>
+          </div>
+        </div>
+
+        <!--RESET PASSWORD SUCCESS POPUP-->
+        <div class="popup-content" id="reset-password-success">
+          <button class="popup-close" data-popup-close></button>
+          <div class="red-wrapper">
+            <h2 class="popup-title">Восстановите <br />пароль</h2>
+            <p class="popup-subtitle">Отправили письмо с&nbsp;инструкцией <br />по&nbsp;восстановлению пароля</p>
+            <div class="buttons">
+              <button type="button" class="button button--submit full" data-popup-close>Продолжить</button>
             </div>
           </div>
         </div>
@@ -500,9 +599,148 @@
             <p class="popup-subtitle">Чек будет участвовать <br />в&nbsp;розыгрыше приза <br />из&nbsp;выбранной категории.</p>
             <p class="popup-subtitle">Выбери какой приз подарит <br />тебе настоящее удовольствие.</p>
             <div class="buttons">
-              <button class="button full" data-popup-open="faq"><span>Отдых и релакс</span></button>
-              <button class="button full" data-popup-open="faq"><span>Дом и уют</span></button>
-              <button class="button full" data-popup-open="faq"><span>Техника и гаджеты</span></button>
+              <button class="button full" data-popup-open="cheque-info"><span>Отдых и релакс</span></button>
+              <button class="button full" data-popup-open="cheque-info"><span>Дом и уют</span></button>
+              <button class="button full" data-popup-open="cheque-info"><span>Техника и гаджеты</span></button>
+            </div>
+          </div>
+        </div>
+
+        <!--CHEQUE INFO POPUP-->
+        <div class="popup-content" id="cheque-info">
+          <button class="popup-close" data-popup-close></button>
+          <div class="red-wrapper">
+            <h2 class="popup-title">Регистрация чека</h2>
+            <ul class="register-check-list">
+              <li>
+                <img src="./assets/img/cheque-info1.webp" alt="President" />
+                <span>Нажмите «Загрузить»</span>
+              </li>
+              <li>
+                <img src="./assets/img/cheque-info2.webp" alt="President" />
+                <span>Выберите фото чека</span>
+              </li>
+              <li>
+                <img src="./assets/img/cheque-info3.webp" alt="President" />
+                <span>Фото чека должно быть:</span>
+                <ul>
+                  <li>чётким</li>
+                  <li>с полным списком продуктов</li>
+                  <li>на фото должен быть QR код</li>
+                </ul>
+              </li>
+              <li>
+                <img src="./assets/img/cheque-info4.webp" alt="President" />
+                <span>Если фото окажется плохого качества, чек принят не будет</span>
+              </li>
+            </ul>
+            <div class="example">
+              <img src="./assets/img/cheque.webp" alt="President" />
+              <span>Пример чека</span>
+            </div>
+
+            <div class="buttons">
+              <button type="button" class="button button--submit full" data-popup-open="cheque-load">
+                <span>Загрузить</span>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <!--CHEQUE LOAD POPUP-->
+        <div class="popup-content" id="cheque-load">
+          <button class="popup-close" data-popup-close></button>
+          <div class="red-wrapper">
+            <h2 class="popup-title">Регистрация чека</h2>
+
+            <!--cheque load form-->
+            <!-- <script>
+              function onChequeLoadFormSubmit(e) {
+                e.preventDefault();
+                window.popup.open('cheque-success');
+              }
+            </script>
+            <form class="form" enctype="multipart/form-data" novalidate onsubmit="onChequeLoadFormSubmit(event)">
+              <div class="download-file">
+                <label class="label-for-file">
+                  <input type="file" name="cheque" class="input input-file" required />
+                  <img src="./assets/img/svg/plus.svg" alt="Алёнка" />
+                  <p class="label__text" data-text="Перетащите фото чека или нажмите для выбора">Перетащите фото чека или нажмите для выбора</p>
+                </label>
+              </div>
+            </form>
+            <button type="submit" class="button button--violet submit">
+              <span>Загрузить</span>
+            </button> -->
+            <!-- <div class="upload-error-message">Чек не выбран.</div> -->
+
+            <div class="buttons">
+              <button type="button" class="button button--submit full" data-popup-open="cheque-load">
+                <span>Загрузить</span>
+              </button>
+              <a href="#" class="link" data-popup-open="cheque-in-self">Ввести данные чека вручную</a>
+            </div>
+          </div>
+        </div>
+
+        <!--CHEQUE-IN SELF POPUP-->
+        <div class="popup-content" id="cheque-in-self">
+          <button class="popup-close" data-popup-close></button>
+          <div class="red-wrapper">
+            <h2 class="popup-title popup-title--white">Ввод данных чека</h2>
+            <p class="popup-subtitle">Внимательно введите <br />данные чека в&nbsp;поля ниже</p>
+
+            <!--Login form-->
+            <script>
+              function onChequeSelfFormSubmit(e) {
+                e.preventDefault();
+                window.popup.open('cheque-success');
+              }
+            </script>
+            <form action="#" class="form" novalidate onsubmit="onChequeSelfFormSubmit(event)">
+              <label class="label">
+                <span class="label__text">ФН</span>
+                <input type="text" name="fn" class="input" required />
+              </label>
+              <label class="label">
+                <span class="label__text">ФД</span>
+                <input type="text" name="fd" class="input" required />
+              </label>
+              <label class="label">
+                <span class="label__text">ФП</span>
+                <input type="text" name="fp" class="input" required />
+              </label>
+              <label class="label">
+                <span class="label__text">Дата покупки</span>
+                <input type="date" name="date" class="input" required />
+              </label>
+              <label class="label">
+                <span class="label__text">Время покупки</span>
+                <input type="time" name="time" class="input" required />
+              </label>
+              <label class="label">
+                <span class="label__text">Сумма покупки</span>
+                <input type="number" name="summa" class="input" required />
+              </label>
+
+              <div class="buttons">
+                <button type="submit" class="button button--submit full"><span>Отправить</span></button>
+                <a href="#" class="link link--white" data-popup-open="cheque-load">Попробовать снова загрузить фото</a>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <!--CHEQUE SUCCESS POPUP-->
+        <div class="popup-content" id="cheque-success">
+          <button class="popup-close" data-popup-close></button>
+          <div class="red-wrapper">
+            <h2 class="popup-title">Чек зарегистрирован</h2>
+            <p class="popup-subtitle">
+              <b>Ваш чек загружен успешно. <br />Следите за&nbsp;его статусом <br />в&nbsp;своём личном кабинете.</b>
+            </p>
+            <div class="buttons">
+              <button type="button" class="button button--submit full" data-popup-close>Закрыть</button>
             </div>
           </div>
         </div>
