--- a/index.html
+++ b/index.html
@@ -456,6 +456,9 @@
               <img src="./assets/img/registration.webp" alt="" />
             </div>
             <h2 class="popup-title">Спасибо <br />за&nbsp;регистрацию! 🎉</h2>
+            <p class="popup-subtitle">
+              <b>Добавьте благородного вкуса в&nbsp;общение с&nbsp;нашим сырным стикерпаком в&nbsp;Telegram!</b>
+            </p>
             <div class="buttons">
               <a href="#" class="button button--submit full" download>Скачать стикеры</a>
             </div>
