--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/css/styles.min.css" />
     <title>President</title>
   </head>
+
   <body class="body">
     <!--PRELOADER-->
     <div class="preloader" data-preloader>
@@ -77,11 +78,12 @@
             <img src="./assets/img/hero-chees.webp" alt="" />
             <div class="effect"></div>
           </div>
+          <a href="#about" data-scrollto class="scroll-down"></a>
         </div>
       </section>
 
       <!--ABOUT-->
-      <!-- <section class="section section--about" id="about">
+      <section class="section section--about" id="about">
         <div class="container">
           <ul class="numbered-list about-list">
             <li>
@@ -110,10 +112,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--MAIN PRIZ-->
-      <!-- <section class="section section--mainprize border-bottom border-top">
+      <section class="section section--mainprize border-bottom border-top" data-fixed-bg>
+        <div class="fixed-bg"></div>
         <div class="container">
           <h2 class="title">
             <span>Главный приз</span>
@@ -122,7 +125,7 @@
 
           <p class="mainprize"><span>500 000₽</span></p>
         </div>
-      </section> -->
+      </section>
 
       <!--WEEK PRIZES-->
       <!-- <section
