--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </section>
 
       <!--WEEK PRIZES-->
-      <!-- <section
+      <section
         class="section section--weekprize"
         data-slider
         data-slides-per-view="3,3,1"
@@ -203,10 +203,10 @@
             <button class="swiper-arrow" data-arrow-next></button>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!--GARANTY PRIZES-->
-      <!-- <section class="section section--garanty border-top-red">
+      <section class="section section--garanty border-top-red">
         <div class="container">
           <h2 class="title title--h2 yellow">Гарантированные призы</h2>
 
@@ -237,7 +237,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--WINNERS-->
       <section class="section section--winners border-top-invers border-bottom">
