--- a/memory.html
+++ b/memory.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico" />
-    <meta name="theme-color" content="#1A2663" />
+    <meta name="theme-color" content="#CC0102" />
     <meta name="description" content="President" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
