--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a class="menu__link" data-popup-open="faq">Частые вопросы</a></li>
             <li class="header__buttons">
               <button class="button button--small" data-popup-open="cheque"><span>Загрузить чек</span></button>
-              <button class="login-btn" data-popup-open="login"><span>Профиль</span></button>
+              <button class="login-btn" data-popup-open="login"><span>Вход</span></button>
             </li>
           </ul>
         </nav>
@@ -50,7 +50,7 @@
 
     <main class="main">
       <!--HERO-->
-      <section class="section section--hero border-bottom">
+      <section class="section section--hero">
         <div class="hero-background" data-fix-bg>
           <img src="./assets/img/hero-bg.webp" alt="" />
         </div>
@@ -67,8 +67,6 @@
           </div>
 
           <img src="./assets/img/hero-center-image.webp" alt="" class="hero-center-image" />
-
-          <a href="#about" data-scrollto class="scroll-down"></a>
         </div>
       </section>
 
@@ -240,7 +238,8 @@
       </section>
 
       <!--WINNERS-->
-      <section class="section section--winners border-top-invers border-bottom">
+      <section class="section section--winners border-top-invers border-bottom" data-fixed-bg>
+        <div class="fixed-bg"></div>
         <div class="container">
           <h2 class="title title--h2 yellow">Победители</h2>
 
