fixed sections changes

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
       </section>
 
       <!--MAIN PRIZ-->
-      <section class="section section--mainprize border-bottom border-top" data-fixed-bg>
+      <div class="border border-top"></div>
+      <section class="section section--mainprize" data-fixed-bg>
         <div class="fixed-bg"></div>
         <div class="container">
           <h2 class="title">
@@ -125,6 +126,7 @@
           <p class="mainprize"><span>500 000₽</span></p>
         </div>
       </section>
+      <div class="border border-bottom"></div>
 
       <!--WEEK PRIZES-->
       <section
@@ -239,7 +241,8 @@
       </section>
 
       <!--WINNERS-->
-      <section class="section section--winners border-top-invers border-bottom" data-fixed-bg>
+      <div class="border border-top-invers"></div>
+      <section class="section section--winners" data-fixed-bg>
         <div class="fixed-bg"></div>
         <div class="container">
           <h2 class="title title--h2 yellow">Победители</h2>
@@ -364,6 +367,7 @@
           </ul>
         </div>
       </section>
+      <div class="border border-bottom"></div>
     </main>
 
     <!--FOOTER-->
