--- a/memory.html
+++ b/memory.html
@@ -75,7 +75,7 @@
                   <p class="subtitle">Специальный приз можно выиграть&nbsp;один&nbsp;раз.</p>
                 </div>
 
-                <button type="button" class="button" data-popup-open="cheque">ЗАГРУЗИТЬ ЧЕК</button>
+                <button type="button" class="button" data-popup-open="cheque"><span>ЗАГРУЗИТЬ ЧЕК</span></button>
               </div>
             </div>
 
