add button to table

--- a/lk.html
+++ b/lk.html
@@ -172,7 +172,7 @@
                 <tr>
                   <th colspan="2">Дата</th>
                   <th>Приз</th>
-                  <th>Категория</th>
+                  <th colspan="2">Категория</th>
                 </tr>
               </thead>
               <tbody>
@@ -181,18 +181,27 @@
                   <td><img src="./assets/img/prizes/ozon-500.webp" /></td>
                   <td>Электронный сертификат «OZON» номиналом 500 (пятьсот) рублей</td>
                   <td>Отдых и&nbsp;релакс</td>
+                  <td>
+                    <a href="#" class="button"><span>Получить</span></a>
+                  </td>
                 </tr>
                 <tr>
                   <td>дд.мм.гггг</td>
                   <td><img src="./assets/img/prizes/cozy-home.webp" /></td>
                   <td>Электронный сертификат «Cozy Home» номиналом 4&nbsp;000 рублей</td>
                   <td>Дом и&nbsp;уют</td>
+                  <td>
+                    <a href="#" class="button"><span>Получить</span></a>
+                  </td>
                 </tr>
                 <tr>
                   <td>дд.мм.гггг</td>
                   <td><img src="./assets/img/prizes/yandex-plus.webp" /></td>
                   <td>Электронный сертификат Яндекс.Плюс на&nbsp;100 (сто) баллов</td>
                   <td>Техника и&nbsp;гаджеты</td>
+                  <td>
+                    <a href="#" class="button"><span>Получить</span></a>
+                  </td>
                 </tr>
               </tbody>
             </table>
