--- a/index.html
+++ b/index.html
@@ -525,58 +525,222 @@
         <div class="popup-content" id="faq">
           <button class="popup-close" data-popup-close></button>
           <h4 class="title title--h4">Часто задаваемые вопросы</h4>
-          <ul class="faq" data-accordeons>
+          <ul class="faq" data-accordeons="">
             <li class="accordeon">
-              <div class="question" data-accordeon-toggle>
-                <p>Оригинальная рецептура</p>
+              <div class="question" data-accordeon-toggle="">
+                <p>КАК ПРИНЯТЬ УЧАСТИЕ В АКЦИИ?</p>
+              </div>
+              <div class="answer" style="height: 0px">
+                <div class="answer__content">
+                  <p>Чтобы стать участником Акции, необходимо:</p>
+                  <p>— Совершить покупку Продукции, из списка Продукции, участвующей в Акции, в количестве минимум 1 (одна) штука:</p>
+                  <ul>
+                    <li>Сыр мягкий President Brie Double Cream с белой плесенью 73% 6х200г Paper</li>
+                    <li>Сыр мягкий President Brie Double Cream с белой плесенью вес. 73% Box</li>
+                    <li>Сыр мягкий President Brie с белой плесенью 60% 6х200г Carton Shell</li>
+                    <li>Сыр мягкий President Brie с белой плесенью вес. 60% Box</li>
+                    <li>Сыр мягкий President Camembert Grill с белой плесенью 45% 3х250г Carton Shell</li>
+                    <li>Сыр мягкий President Camembert с белой плесенью 45% 8х125г Carton Shell</li>
+                    <li>Сыр мягкий President La Brique с белой плесенью 45% 4х200г Carton Shell</li>
+                    <li>Сыр мягкий President Lingot с белой плесенью вес. 60% Box</li>
+                    <li>Сыр мягкий President Mini Snack a la Francaise с красной плесенью 60% 6х90г Flowp</li>
+                    <li>Сыр мягкий President Petit Brie с белой плесенью 60% 8х125г Carton Shell</li>
+                    <li>Сыр мягкий President Snack a la Francaise с белой плесенью 60% 6х170г Flowp</li>
+                    <li>Сыр PRESIDENT Royal Blue c голубой плесенью 55%, без змж, 125г</li>
+                    <li>Сыр President Le Cremiot Extra Fondant с белой плесенью 60%, 200г</li>
+                    <li>Сыр PRESIDENT Royal Blue c голубой плесенью 55%, без змж, вес.</li>
+                    <li>Сыр мягкий President Козий Snack a la Francaise из козьего молока с белой плесенью 50% 6х90г</li>
+                  </ul>
+                  <p>— Зарегистрироваться на Сайте Акции https://president-cheese.ru/.</p>
+                  <p>— Чек покупки необходимо загрузить в личный кабинет на сайте акции.</p>
+                  <p>
+                    Загружаемая фотография кассового чека должна быть четкой, легко читаемой, со считываемым QR-кодом или штрих-кодом, датой и
+                    временем совершения покупки, и иной содержащейся на кассовом чеке информацией
+                  </p>
+                  <p>
+                    — Участник Акции может поучаствовать в розыгрыше одного дополнительного приза за выигрыш в игре «Мемори», размещенной на сайте
+                    Акции https://president-cheese.ru/. Участие в игре реализуется по желанию Участника и не является обязательным условием участия в
+                    Акции или получения иных призов. Участник получает возможность сыграть в игру только после регистрации не менее одного чека
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle="">
+                <p>КТО МОЖЕТ ПРИНЯТЬ УЧАСТИЕ В АКЦИИ?</p>
+              </div>
+              <div class="answer">
+                <div class="answer__content">
+                  <p>
+                    К участию в Акции допускаются дееспособные физические лица, граждане Российской Федерации, достигшие 18 лет, постоянно проживающие
+                    на территории РФ. В Акции не имеют права участвовать сотрудники и представители Клиента, Агента Клиента, Организатора, Оператора,
+                    производителя Продукции, аффилированные с Организатором / Оператором/Клиентом/Агентом Клиента, производителем Продукции лица, в
+                    том числе физические лица, с которыми у Организатора / Оператора/Клиента/Агента Клиента, производителя Продукции заключены
+                    гражданско-правовые договоры на выполнение работ и/или оказание услуг; сотрудники организаций, привлекаемых к проведению Акции, а
+                    также члены их семей.
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle="">
+                <p>СРОКИ ПРОВЕДЕНИЯ АКЦИИ</p>
+              </div>
+              <div class="answer">
+                <div class="answer__content">
+                  <p>Период совершения покупки и регистрации чеков с 01.09.2025 г. по 31.10.2025 г. (включительно).</p>
+                  <p>Период выдачи призов: с 01.09.2025 г. по 07.11.2025 года (включительно)</p>
+                </div>
+              </div>
+            </li>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle="">
+                <p>ГДЕ ПРОВОДИТСЯ АКЦИЯ?</p>
+              </div>
+              <div class="answer">
+                <div class="answer__content">
+                  <p>Во всех магазинах всех торговых сетей, расположенные на территории Российской Федерации.</p>
+                </div>
+              </div>
+            </li>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle="">
+                <p>КАКАЯ ПРОДУКЦИЯ УЧАСТВУЕТ В АКЦИИ?</p>
               </div>
               <div class="answer">
                 <div class="answer__content">
                   <ul>
-                    <li>Благородная белая плесень Geotrichum candidum</li>
-                    <li>Бархатистая корочка</li>
-                    <li>Уникальный пикантный вкус</li>
+                    <li>Сыр мягкий President Brie Double Cream с белой плесенью 73% 6х200г Paper</li>
+                    <li>Сыр мягкий President Brie Double Cream с белой плесенью вес. 73% Box</li>
+                    <li>Сыр мягкий President Brie с белой плесенью 60% 6х200г Carton Shell</li>
+                    <li>Сыр мягкий President Brie с белой плесенью вес. 60% Box</li>
+                    <li>Сыр мягкий President Camembert Grill с белой плесенью 45% 3х250г Carton Shell</li>
+                    <li>Сыр мягкий President Camembert с белой плесенью 45% 8х125г Carton Shell</li>
+                    <li>Сыр мягкий President La Brique с белой плесенью 45% 4х200г Carton Shell</li>
+                    <li>Сыр мягкий President Lingot с белой плесенью вес. 60% Box</li>
+                    <li>Сыр мягкий President Mini Snack a la Francaise с красной плесенью 60% 6х90г Flowp</li>
+                    <li>Сыр мягкий President Petit Brie с белой плесенью 60% 8х125г Carton Shell</li>
+                    <li>Сыр мягкий President Snack a la Francaise с белой плесенью 60% 6х170г Flowp</li>
+                    <li>Сыр PRESIDENT Royal Blue c голубой плесенью 55%, без змж, 125г</li>
+                    <li>Сыр President Le Cremiot Extra Fondant с белой плесенью 60%, 200г</li>
+                    <li>Сыр PRESIDENT Royal Blue c голубой плесенью 55%, без змж, вес.</li>
+                    <li>Сыр мягкий President Козий Snack a la Francaise из козьего молока с белой плесенью 50% 6х90г</li>
                   </ul>
                 </div>
               </div>
             </li>
             <li class="accordeon">
-              <div class="question" data-accordeon-toggle>
-                <p>Вкус с&nbsp;историей</p>
+              <div class="question" data-accordeon-toggle="">
+                <p>СОХРАНЯТЬ ЛИ ЧЕКИ?</p>
               </div>
               <div class="answer">
                 <div class="answer__content">
-                  <ul>
-                    <li>30-е годы&nbsp;— Андре Бенье создаёт первые 17&nbsp;головок камамбера</li>
-                    <li>1968&nbsp;год&nbsp;— рождается бренд Président</li>
-                    <li>Наши дни&nbsp;— Président стал символом качества и&nbsp;традиций</li>
-                  </ul>
+                  <p>Чеки необходимо сохранять до окончания акции</p>
                 </div>
               </div>
             </li>
             <li class="accordeon">
-              <div class="question" data-accordeon-toggle>
-                <p>Изысканные сочетания</p>
+              <div class="question" data-accordeon-toggle="">
+                <p>НУЖНО ЛИ РЕГИСТРИРОВАТЬ ЧЕКИ?</p>
               </div>
               <div class="answer">
                 <div class="answer__content">
-                  <ul>
-                    <li>Идеальная пара&nbsp;— игристое, белое и&nbsp;лёгкое красное вино</li>
-                    <li>Прекрасно сочетается с&nbsp;мёдом, орехами и&nbsp;виноградом</li>
-                  </ul>
+                  <p>
+                    Чек необходимо зарегистрировать в Личном кабинете Сайта чек, подтверждающий покупку Продукции согласно условиям настоящих Правил.
+                    Фотография (изображение) чека должна быть чёткой, данные на чеке – однозначно читаемыми, чек должен быть отображен на фотографии
+                    полностью. Также Участник может воспользоваться опцией Сайта и вбить данные чека вручную в соответствующем разделе Личного
+                    кабинета.
+                  </p>
                 </div>
               </div>
             </li>
             <li class="accordeon">
-              <div class="question" data-accordeon-toggle>
-                <p>Ассортимент</p>
+              <div class="question" data-accordeon-toggle="">
+                <p>СКОЛЬКО РАЗ Я МОГУ ПОКУПАТЬ ПРОДУКЦИЮ "PRESEDENT" И УЧАСТВОВАТЬ В АКЦИИ В ТЕЧЕНИИ АКЦИИ?</p>
               </div>
               <div class="answer">
                 <div class="answer__content">
+                  <p>
+                    Каждый участник для участия в розыгрыше Призов может зарегистрировать не более 15 (пятнадцати) чеков в каждую неделю периода
+                    Акции.
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle="">
+                <p>КАК ПРОВОДИТСЯ РОЗЫГРЫШ ПРИЗОВ?</p>
+              </div>
+              <div class="answer">
+                <div class="answer__content">
+                  <p>Розыгрыш еженедельных призов происходит в соответствии с датами ниже:</p>
                   <ul>
-                    <li>Классический Camembert Président</li>
-                    <li>Camembert Grill&nbsp;— идеально для&nbsp;жарки и&nbsp;запекания</li>
+                    <li>1-я неделя – с 01.09.2025 г. по 07.09.2025 г. включительно;</li>
+                    <li>2-я неделя – с 08.09.2025 г. по 14.09.2025 г. включительно;</li>
+                    <li>3-я неделя – с 15.09.2025 г. по 21.09.2025 г. включительно;</li>
+                    <li>4-я неделя – с 22.09.2025 г. по 28.09.2025 г. включительно;</li>
+                    <li>5-я неделя – с 29.09.2025 г. по 05.10.2025 г. включительно;</li>
+                    <li>6-я неделя – с 06.10.2025 г. по 12.10.2025 г. включительно;</li>
+                    <li>7-я неделя – с 13.10.2025 г. по 19.10.2025 г. включительно;</li>
+                    <li>8-я неделя – с 20.10.2025 г. по 26.10.2025 г. включительно;</li>
+                    <li>9-я неделя – с 27.10.2025 г. по 31.10.2025 г. включительно;</li>
                   </ul>
+                  <p>Розыгрыш главных призов акции будет произведен:</p>
+                  <ul>
+                    <li>За период с 01.09.2025 г. по 30.09.2025 г.– 08.10.2025 г.;</li>
+                    <li>За период с 01.10.2025 г. по 31.10.2025 г.– 05.11.2025 г.;</li>
+                  </ul>
+                  <p>Розыгрыш призов проводится в соответствии с формулами, указанными в правилах акции, в разделе 8</p>
+                </div>
+              </div>
+            </li>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle="">
+                <p>КАК Я УЗНАЮ, ЧТО СТАЛ ПОБЕДИТЕЛЕМ?</p>
+              </div>
+              <div class="answer">
+                <div class="answer__content">
+                  <p>
+                    Организаторы акции свяжутся с вами по электронной почте, указанной в личном кабинете на сайте акции. Также результаты всех
+                    розыгрышей, будут публиковаться на Сайте Акции https://president-cheese.ru/.
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle="">
+                <p>КАК ПРОИСХОДИТ ВРУЧЕНИЕ ПРИЗОВ?</p>
+              </div>
+              <div class="answer">
+                <div class="answer__content">
+                  <p>
+                    Все призы вручаются путем отправления электронного сертификата на электронную почту победителя, указанную при регистрации на сайте
+                    Акции https://president-cheese.ru/.
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle="">
+                <p>КТО УПЛАЧИВАЕТ НАЛОГ?</p>
+              </div>
+              <div class="answer">
+                <div class="answer__content">
+                  <p>
+                    Организатор акции выступает налоговым агентом, предоставляет в налоговые органы сведения о доходах физических лиц в связи с
+                    вручением им призов, а также в полном объёме удерживает денежную часть еженедельного и главного призов и уплачивает налог на
+                    доходы физических лиц из данной дополнительной денежной награды
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li class="accordeon">
+              <div class="question" data-accordeon-toggle="">
+                <p>ЧТО ДЕЛАТЬ, ЕСЛИ У МЕНЯ ВОЗНИКЛИ ДОПОЛНИТЕЛЬНЫЕ ВОПРОСЫ ПО ПРОВЕДЕНИЮ АКЦИИ?</p>
+              </div>
+              <div class="answer">
+                <div class="answer__content">
+                  <p>Если у вас возникли ещё вопросы, вы можете связаться с организаторами акции по электронной почте: info@president-cheese.ru</p>
                 </div>
               </div>
             </li>
