--- a/index.html
+++ b/index.html
@@ -546,9 +546,9 @@
                     <li>Сыр мягкий President Mini Snack a la Francaise с красной плесенью 60% 6х90г Flowp</li>
                     <li>Сыр мягкий President Petit Brie с белой плесенью 60% 8х125г Carton Shell</li>
                     <li>Сыр мягкий President Snack a la Francaise с белой плесенью 60% 6х170г Flowp</li>
-                    <li>Сыр PRESIDENT Royal Blue c голубой плесенью 55%, без змж, 125г</li>
+                    <li>Сыр PRESIDENT Royal Bleu c голубой плесенью 55%, без змж, 125г</li>
                     <li>Сыр President Le Cremiot Extra Fondant с белой плесенью 60%, 200г</li>
-                    <li>Сыр PRESIDENT Royal Blue c голубой плесенью 55%, без змж, вес.</li>
+                    <li>Сыр PRESIDENT Royal Bleu c голубой плесенью 55%, без змж, вес.</li>
                     <li>Сыр мягкий President Козий Snack a la Francaise из козьего молока с белой плесенью 50% 6х90г</li>
                   </ul>
                   <p>— Зарегистрироваться на Сайте Акции https://president-cheese.ru/.</p>
@@ -621,9 +621,9 @@
                     <li>Сыр мягкий President Mini Snack a la Francaise с красной плесенью 60% 6х90г Flowp</li>
                     <li>Сыр мягкий President Petit Brie с белой плесенью 60% 8х125г Carton Shell</li>
                     <li>Сыр мягкий President Snack a la Francaise с белой плесенью 60% 6х170г Flowp</li>
-                    <li>Сыр PRESIDENT Royal Blue c голубой плесенью 55%, без змж, 125г</li>
+                    <li>Сыр PRESIDENT Royal Bleu c голубой плесенью 55%, без змж, 125г</li>
                     <li>Сыр President Le Cremiot Extra Fondant с белой плесенью 60%, 200г</li>
-                    <li>Сыр PRESIDENT Royal Blue c голубой плесенью 55%, без змж, вес.</li>
+                    <li>Сыр PRESIDENT Royal Bleu c голубой плесенью 55%, без змж, вес.</li>
                     <li>Сыр мягкий President Козий Snack a la Francaise из козьего молока с белой плесенью 50% 6х90г</li>
                   </ul>
                 </div>
@@ -913,7 +913,7 @@
             </li>
             <li>
               <img src="./assets/img/productions/4.webp" alt="" />
-              <h3>Royal Blue</h3>
+              <h3>Royal Bleu</h3>
               <p>
                 Сыр с&nbsp;голубой плесенью и&nbsp;уникальным вкусом, который достигается благодаря длинному сроку созревания (до&nbsp;90&nbsp;дней)
               </p>
