--- a/memory.html
+++ b/memory.html
@@ -507,7 +507,7 @@
             </li>
             <li>
               <img src="./assets/img/productions/4.webp" alt="" />
-              <h3>Royal Blue</h3>
+              <h3>Royal Bleu</h3>
               <p>
                 Сыр с&nbsp;голубой плесенью и&nbsp;уникальным вкусом, который достигается благодаря длинному сроку созревания (до&nbsp;90&nbsp;дней)
               </p>
